--- a/GameServer/public/style.css
+++ b/GameServer/public/style.css
@@ -3,39 +3,29 @@ body {
     color:white;
 }
 .container {
-    display: grid;
+
     width: 60%;
     margin-left: auto;
     margin-right: auto
-
-
 }
 
 textarea {
     font-size: 30px;
 }
-.item0 {
-    grid-column: 1 / 3;
-    grid-row: 1;
+.player {
+    display: inline-block;
+    list-style:none;
+    width: 150px;
+    height: 100px;
+    background-color: red;
+    margin: 10px;
 }
-.item1 {
+ul textarea {
+    content: 'asd';
+    display: block;
+    width: 100px;
+}
 
-    grid-column: 1;
-    grid-row: 2;
-}
-.item2 {
-    grid-column: 2;
-    grid-row: 2;
-}
-.item3 {
-
-    grid-column: 1;
-    grid-row: 3;
-}
-.item4 {
-    grid-column: 2;
-    grid-row: 3;
-}
 .item5 {
     margin-top: 50px;
     display: block;
@@ -44,6 +34,6 @@ textarea {
 }
 
 .item4,.item3 {
-    cursor: pointer;
+        cursor: pointer;
     padding: 15px;
 }
